[package]
description = "Add ip address of running docker containers to /etc/hosts"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "docker-update-hosts"
version = "0.0.2"

[dependencies]
bollard = "0.15.0"
futures = "0.3.30"
sudo = "0.6.0"
thiserror = { version = "1.0.56" }
tokio = { version = "1.36", features = ["macros"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
